# bq-metadata-search

./: .gitignore  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  USAGE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  api.py
app/extractor/: __init__.py  bq_client.py  run.py
app/search/: __init__.py  search.py
app/storage/: __init__.py  db.py  models.py
app/utils/: __init__.py
app/web/: __init__.py  routes.py
app/web/static/: scripts.js  styles.css
app/web/templates/: advanced_search.html  base.html  dataset.html  index.html  project.html  search.html  table.html
docs/: USAGE.md
scripts/: extract-metadata.sh  fix_missing_tables.py  init-db.sql  setup.sh  test_db_connection.py  wait-for-db.sh
tests/: test_extractor.py  test_search.py
