[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bq-metadata-search"
version = "0.1.0"
description = "A tool for extracting and searching metadata from Google BigQuery projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  # Google Cloud dependencies
  "google-cloud-bigquery==3.17.2",
  "google-auth==2.28.2",

  # Backend framework
  "fastapi==0.110.0",
  "uvicorn==0.29.0",
  "pydantic==2.10.6",
  "python-multipart==0.0.20",

  # Database and search
  "sqlalchemy==2.0.38",
  "psycopg2==2.9.10",   # For PostgreSQL
  "alembic==1.13.1",    # For database migrations

  # Frontend
  "jinja2==3.1.3",

  # Testing
  "pytest==7.4.4",
  "pytest-cov==4.1.0",

  # Utilities
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = ["black", "isort", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
